--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
     buildToolsVersion "30.0.3"
 
     defaultConfig {
-        applicationId "com.harkka.login"
+        applicationId "com.github.sropelinen.olioht"
         minSdkVersion 23
         targetSdkVersion 30
         versionCode 1
