connected LoginActivity and MainActivity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,13 +10,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.OlioHT">
         <activity android:name=".LoginActivity">
-        </activity>
-        <activity android:name=".MainActivity">
             <intent-filter>
                 <category android:name="android.intent.category.LAUNCHER" />
                 <action android:name="android.intent.action.MAIN" />
             </intent-filter>
         </activity>
+        <activity android:name=".MainActivity" />
 
     </application>
 
